--- a/packages/lighting/automations/light_braai_room.yaml
+++ b/packages/lighting/automations/light_braai_room.yaml
@@ -1,5 +1,4 @@
 ---
-
 timer:
   # When calling the start service on a timer that is already running, it resets
   # the duration it will need to finish and restart the timer without triggering
@@ -8,7 +7,8 @@ timer:
   # started event unless the timer is paused, in that case, it triggers a
   # restarted event.
   braairoomlight:
-    duration: '00:15:00'
+    duration: "00:15:00"
+    restore: true
 
 automation:
   # Timer end = Turn off
@@ -29,13 +29,13 @@ automation:
     trigger:
       - platform: state
         entity_id: binary_sensor.braai_room_pir
-        to: 'on'
+        to: "on"
     condition:
       - condition: and
         conditions:
-          - condition: state  # 'night' condition: from sunset until sunrise
+          - condition: state # 'night' condition: from sunset until sunrise
             entity_id: sun.sun
-            state: 'below_horizon'
+            state: "below_horizon"
           #- condition: numeric_state
           #  entity_id: sensor.illumination_7811dcb90d53
           #  below: 200
