--- a/packages/lighting/automations/light_motion_ensuite_mbr.yaml
+++ b/packages/lighting/automations/light_motion_ensuite_mbr.yaml
@@ -1,9 +1,9 @@
 ---
-
 timer:
   motion_mbr_to_ens:
     name: Motion MBR to ENS
-    duration: '00:00:10'
+    duration: "00:00:10"
+    restore: true
 
 automation:
   # Motion = Turn on
@@ -11,19 +11,19 @@ automation:
     trigger:
       - platform: state
         entity_id: binary_sensor.main_bedroom_pir
-        to: 'on'
+        to: "on"
     condition:
-      - condition: state  # 'night' condition: from sunset until sunrise
+      - condition: state # 'night' condition: from sunset until sunrise
         entity_id: sun.sun
-        state: 'below_horizon'
+        state: "below_horizon"
       - condition: or
         conditions:
           - condition: state
             entity_id: timer.morning_routine
-            state: 'active'
+            state: "active"
           - condition: state
             entity_id: alarm_control_panel.home_alarm
-            state: 'disarmed'
+            state: "disarmed"
     action:
       - service: timer.start
         data:
@@ -33,11 +33,11 @@ automation:
     trigger:
       - platform: state
         entity_id: binary_sensor.ensuite_pir
-        to: 'on'
+        to: "on"
     condition:
-      - condition: state  # Alarm armed home only
+      - condition: state # Alarm armed home only
         entity_id: timer.motion_mbr_to_ens
-        state: 'active'
+        state: "active"
     action:
       - service: timer.cancel
         data:
