--- a/packages/lighting/automations/light_motion_timers_back_lights.yaml
+++ b/packages/lighting/automations/light_motion_timers_back_lights.yaml
@@ -1,5 +1,4 @@
 ---
-
 timer:
   # When calling the start service on a timer that is already running, it resets
   # the duration it will need to finish and restart the timer without triggering
@@ -8,8 +7,8 @@ timer:
   # started event unless the timer is paused, in that case, it triggers a
   # restarted event.
   outsidebacklight:
-    duration: '00:10:00'
-
+    duration: "00:10:00"
+    restore: true
 # automation:
 
 # ### Back Lights
