--- a/custom_components/dreame_vacuum/manifest.json
+++ b/custom_components/dreame_vacuum/manifest.json
@@ -8,7 +8,7 @@
   "dependencies": [
     "http"
   ],
-  "documentation": "https://github.com/Tasshack/dreame-vacuum",
+  "documentation": "https://github.com/Tasshack/dreame-vacuum/tree/dev?tab=readme-ov-file#features",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/Tasshack/dreame-vacuum/issues",
   "requirements": [
@@ -18,8 +18,8 @@
     "requests",
     "pycryptodome",
     "python-miio",
-    "py-mini-racer",
+    "mini-racer",
     "paho-mqtt"
   ],
-  "version": "v2.0.0b16"
+  "version": "v2.0.0b20"
 }
