--- a/custom_components/dreame_vacuum/services.yaml
+++ b/custom_components/dreame_vacuum/services.yaml
@@ -128,6 +128,21 @@ vacuum_follow_path:
       selector:
         object:
 
+vacuum_start_shortcut:
+  target:
+    entity:
+      integration: dreame_vacuum
+      domain: vacuum
+  fields:
+    shortcut_id:
+      example: 32
+      required: true
+      selector:
+        number:
+          min: 32
+          max: 128
+          mode: box
+
 vacuum_remote_control_move_step:
   target:
     entity:
@@ -139,16 +154,16 @@ vacuum_remote_control_move_step:
       required: true
       selector:
         number:
-          min: -128
-          max: 128
+          min: -360
+          max: 360
           mode: box
     velocity:
       example: 100
       required: true
       selector:
         number:
-          min: -300
-          max: 100
+          min: -600
+          max: 600
           mode: box
 
 vacuum_install_voice_pack:
@@ -401,7 +416,12 @@ vacuum_set_custom_cleaning:
         object:
     water_volume:
       example: "[1,1,2,3,1]"
-      required: true
+      required: false
+      selector:
+        object:
+    wetness_level:
+      example: "[16,10,32,8,1]"
+      required: false
       selector:
         object:
     cleaning_mode:
@@ -412,6 +432,37 @@ vacuum_set_custom_cleaning:
     repeats:
       example: "[2,2,1,3,1]"
       required: true
+      selector:
+        object:
+        
+vacuum_set_custom_carpet_cleaning:
+  target:
+    entity:
+      integration: dreame_vacuum
+      domain: vacuum
+  fields:
+    id:
+      example: "[1,2] or 3" 
+      required: true
+      selector:
+        object:
+    type:
+      example: "[0,1] or 1" 
+      required: true
+      selector:
+        number:
+          min: 0
+          max: 1
+    carpet_cleaning:
+      example: "[0,3] or 5" 
+      required: false
+      selector:
+        number:
+          min: 0
+          max: 6
+    carpet_settings:
+      example: "['carpet_boost'] or 'clean_carpets_first' or '-1' or []" 
+      required: false
       selector:
         object:
         
@@ -459,6 +510,9 @@ vacuum_reset_consumable:
             - "squeegee"
             - "onboard_dirty_water_tank"
             - "dirty_water_tank"
+            - "deodorizer"
+            - "wheel"
+            - "scale_inhibitor"
 
 vacuum_rename_shortcut:
   target:
